[project]
name = "diff-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cvxpy>=1.8.1",
    "ecos>=2.0.14",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.0",
    "keras>=3.12.0",
    "keras-hub>=0.19.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
